WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204200
The CSSParser should not consume negative or unit-less lengths for the SVG properties 'r', 'rx' and 'ry'
https://bugs.webkit.org/show_bug.cgi?id=204200
Summary
The CSSParser should not consume negative or unit-less lengths for the SVG pr...
Said Abou-Hallawa
Reported
2019-11-14 12:30:05 PST
SVGEllipseElement::parseAttribute() and SVGCircleElement::parseAttribute() both forbid negative values for these properties. The CSSParser should be consistent with setting these properties through setAttribute(). The type of these properties is <length-percentage>,
https://www.w3.org/TR/css-values/#typedef-length-percentage
, which requires specifying the unit if it's a length.
Attachments
Patch
(13.33 KB, patch)
2019-11-14 12:41 PST
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2019-11-14 12:41:20 PST
Created
attachment 383570
[details]
Patch
WebKit Commit Bot
Comment 2
2019-11-14 14:45:21 PST
Comment on
attachment 383570
[details]
Patch Clearing flags on attachment: 383570 Committed
r252467
: <
https://trac.webkit.org/changeset/252467
>
WebKit Commit Bot
Comment 3
2019-11-14 14:45:23 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-11-14 14:46:18 PST
<
rdar://problem/57205640
>
Ryosuke Niwa
Comment 5
2022-07-14 11:48:39 PDT
***
Bug 165400
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug