The CSSParser should not consume negative or unit-less lengths for the SVG properties 'r', 'rx' and 'ry' https://bugs.webkit.org/show_bug.cgi?id=204200

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2019-11-14
Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/svg/geometry/parsing/r-computed-expected.txt:
* web-platform-tests/svg/geometry/parsing/r-invalid-expected.txt:
* web-platform-tests/svg/geometry/parsing/rx-computed-expected.txt:
* web-platform-tests/svg/geometry/parsing/rx-invalid-expected.txt:
* web-platform-tests/svg/geometry/parsing/ry-computed-expected.txt:
* web-platform-tests/svg/geometry/parsing/ry-invalid-expected.txt:

Source/WebCore:

Both the CSSParser and SVGElement::parseAttribute() should be consistent
when parsing these properties.

The type of these properties is <length-percentage>, which requires specifying
the unit for the length: https://www.w3.org/TR/css-values/#length-value.

* css/parser/CSSParserFastPaths.cpp:
(WebCore::isSimpleLengthPropertyID):
* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeRxOrRy):
(WebCore::CSSPropertyParser::parseSingleValue):

LayoutTests:

* svg/css/parse-length-expected.txt:
* svg/css/parse-length.html:

Canonical link: https://commits.webkit.org/217507@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252467 268f45cc-cd09-0410-ab3c-d52691b4dbfc